<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialog">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nouvelle_partie"
        android:textSize="28sp"
        android:background="@color/colorPrimary"/>
    <EditText
        android:id="@+id/joueur1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nom_joueur1" />
    <EditText
        android:id="@+id/joueur2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/nom_joueur2"/>
    <Button
        android:id="@+id/btnConfirmer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/debut_partie"/>
</LinearLayout>